--- a/config/webhookreceiverconfig.json
+++ b/config/webhookreceiverconfig.json
@@ -1,7 +1,7 @@
 {
     "emailConfig": {
         "from": "rafaelcunha@dreamcloud.network",
-        "password": "Sonh@dor19",
+        "password": "abcdef",
         "to": [
             "rafael.cunha@visa.com",
             "aquinocunha@gmail.com"
